# worship-obs-toolkit

./: .gitignore  CLAUDE.md  Dimanche 10 janvier 2021.json  Dimanche 24 janvier 2021.json  First.json  Preparer un culte.bat  README.md  [SPONTANES] ASCENSION_PENTECOTE.txt  [SPONTANES] TEMPS_AVENT.txt  [SPONTANES] TEMPS_EGLISE.txt  [SPONTANES] TEMPS_PASSION_PAQUES.txt  arreter-serveur.bat  cantique_paroles_item.json  cantique_title.json  chants.sample.txt  config.json  config.json.example  desinstaller-poste-eglise.bat  generate.py  installer-poste-eglise.bat  obs_json_resources.py  obs_push.py  pyproject.toml  serveur.bat
.temp/: d. (Spontané) 31-28 Toi qui es lumière .txt  m. (Spontané) 56-04 Pour cet immense bonheur.txt  o. 13-04 Debout, resplendis.txt
docs/: deploiement.md  format-cantique.md  gestion_encodages.md  relecture-corpus.md  utilisation_chants_txt.md
obs/: Frappez dans vos mains.txt  Tailletexte.json  Viens, Saint-Esprit.txt  cantique_paroles.json  etienne.json  generate.py  obs_json_resources.py
schemas/: cantique.schema.json
scripts/: adr_check.py  adr_new.py  build_kit.sh  convert_cantiques.py  promote_cantiques.py  spike_obs.py
stock/: 12-01 Je louerai l'Eternel.txt  12-07 Tournez les yeux vers le Seigneur.txt  12-08 Que la gloire du Seigneur.txt  12-13 Je chanterai le nom du Seigneur.txt  12-20 Rendez grâce au Seigneur, Il est bon.txt  14-09 Cherchez d'abord le royaume de Dieu.txt  21-03 - Me voici Seigneur, Sauveur.txt  21-04 Adorons tous le Seigneur.txt  21-14 Les mains ouvertes devant toi.txt  21-15 Venez le célebrer.txt  (+80 more)
tpl/: Scene.json  (+9 more)
(+3024 files in other folders)
